# j_core

./: mypy.ini  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build_package.yml  mypy_check.yml
j_core/: Runtime.py  __init__.py
j_core/businessobject/: BusinessObject.py  __init__.py  businessobject_decorator.py
j_core/config/: __init__.py  database_config.py
j_core/exceptions/: __init__.py  exceptions.py
