[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "J_Core"
authors = [
    { name = "jswa" },
]
description = "Python library to create and maintain business object endpoints."
requires-python = ">=3.12"
#readme = "README.rst"
#keywords = ["none", "nothing"]
#license = {text = ""}
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content"
]
dependencies = [
    "SQLAlchemy==2.0.28"
]
dynamic = ["version"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages]
find = { }  # Scan the project directory with the default parameters

[tool.setuptools.package-data]
j_core = ["py.typed"]

[tool.setuptools.dynamic]
version = { attr = "j_core.__version__" }
